liblscp - LinuxSampler Control Protocol API
-------------------------------------------

ChangeLog

0.5.5  2007-10-12  Changed client interface function, for editing
                   instrument, from:
                     lscp_edit_instrument();
                   to:
                     lscp_edit_channel_instrument();

0.5.4  2007-10-02  Added new client interface function, for editing
                   instrument:
                     lscp_edit_instrument();

                   Fixed some minor bugs in:
                     lscp_set_fxsend_midi_controller();
                     lscp_set_fxsend_level();

0.5.3  2007-01-15  Added new client interface functions, for sampler
                   channel effect sends control:
                     lscp_set_fxsend_midi_controller();
                     lscp_set_fxsend_level();

                   Added new field member to lscp_fxsend_info_t (level).

0.5.2  2007-01-11  Added new client interface functions, for sampler
                   channel effect sends control:
                     lscp_create_fxsend();
                     lscp_destroy_fxsend();
                     lscp_get_fxsends();
                     lscp_list_fxsends();
                     lscp_get_fxsend_info();
                     lscp_set_fxsend_audio_channel();
                   and for global volume:
                     lscp_get_volume();
                     lscp_set_volume();

                   Audio routing representation changed to integer array.

0.5.1  2006-12-22  Added support for new (un)subscribable events:
                     LSCP_EVENT_AUDIO_OUTPUT_DEVICE_COUNT,
                     LSCP_EVENT_AUDIO_OUTPUT_DEVICE_INFO,
                     LSCP_EVENT_MIDI_INPUT_DEVICE_COUNT,
                     LSCP_EVENT_MIDI_INPUT_DEVICE_INFO,
                     LSCP_EVENT_MIDI_INSTRUMENT_MAP_COUNT,
                     LSCP_EVENT_MIDI_INSTRUMENT_MAP_INFO,
                     LSCP_EVENT_MIDI_INSTRUMENT_COUNT,